--- a/app/views/shared/_leftbar.html.erb
+++ b/app/views/shared/_leftbar.html.erb
@@ -5,6 +5,8 @@
 </div>
 <div class="bg-light_sladock text-white overflow-y-auto min-w-200 h-left_full" style="width: 300px" data-controller="notification" data-notification-workspace="<%= workspace.id %>" data-notification-user="<%= current_user.nickname %>">
   <div class="left-bar">
+    <%= link_to t(".sidebar.drafts"),workspace_draft_path(@workspace),
+  class: "truncate pl-10 py-1 hover:bg-deep_sladock block hidden draft-btn" %>
     <p class="truncate pl-10 py-1 hover:bg-deep_sladock"><%= t(".sidebar.threads") %></p>
     <p class="truncate pl-10 py-1 hover:bg-deep_sladock"><%= t(".sidebar.mentions") %></p>
     <p class="truncate pl-10 py-1 hover:bg-deep_sladock"><%= link_to t(".sidebar.save"), workspace_uploadedfiles_path(workspace) %></p>
