ckdeitor function finish

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,5 +12,18 @@
   <body>
     <div class="absolute top-0 w-full z-10 text-white"><%= notice %></div>
     <%= yield %>
+    <%# <textarea class="1234" placeholder="輸入訊息"></textarea> %>
+    <script>
+      // $('.1234').keydown( (e) => {
+      //   console.log('keydown')
+      //   if(e.keyCode == 13){
+      //     e.preventDefault()
+      //             console.log('e.keyCode', e.keyCode)
+
+      //     console.log(123)
+      //   }
+      // })
+    </script>
+
   </body>
 </html>
