--- a/app/views/profiles/_edit.html.erb
+++ b/app/views/profiles/_edit.html.erb
@@ -18,19 +18,15 @@
         <span class="text-xs text-gray-500">enter a phone number</span>        
       </div>
       <div class="col-span-1  flex flex-col items-center">
-        <div class="mb-2">
-          <div class="">
+        <div class="mb-2 w-full">
             <%= image_tag (current_user.profile.try(:avatar_url,(:large)) || 'https://ca.slack-edge.com/T0196R42HU4-U018Z8Q6XU5-g15b03dc0178-192'),id: "avatar_large",class:"w-full block mx-auto" %>
-          </div>
         </div>
         <%= f.hidden_field "details",class:"detail" %>
         <%= f.hidden_field "profile[avatar]" %>
         <%= f.file_field "profile[avatar]",id:"avatar",class:'hidden' %>
         <div class="avatar-btn border border-gray-600 py-2 px-5 font-bold rounded cursor-pointer">Upload an image
         </div>
-        <% if has_avatar?(current_user) %>
-          <%= link_to "remove the photo",profiles_path(current_user),method:"DELETE",class:"remove-avatar text-blue-500 text-sm cursor-pointer",remote: true %>
-        <% end %>
+          <%= link_to "remove the photo",profiles_path(current_user),method:"DELETE",class:"remove-avatar text-blue-500 text-sm cursor-pointer hidden" %>
       </div>      
     </div>
     <div class="border-t border-gray-600 flex p-5 justify-end">
