--- a/app/views/messages/_message_broadcast.html.erb
+++ b/app/views/messages/_message_broadcast.html.erb
@@ -40,7 +40,7 @@
       </div>
     </div>
     <div class="react-bar absolute right-0  mr-10 -mt-3 flex">
-      <button class="emoji-trigger" data-action="click-> emoji#click" data-id=<%= message.id %>Emoji</button>
+      <button class="emoji-trigger" data-action="click-> emoji#click" data-id=<%= message.id %>>Emoji</button>
       <% if controller_name != "directmsgs"%>
       <button class= "share-btn btn btn-blue" data-id="<%= message.id %>">share</button>
       <% end %>
