--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 
-<div class="header bg-deep_sladock h-10 border-b border-sladock_border sticky top-0 w-full">
+<div class="header bg-deep_sladock h-10 border-b border-sladock_border sticky top-0 w-full z-40">
   <div class="pt-1 grid grid-cols-4">
     <div class="w-full search-area flex items-center col-start-2 col-end-4 ">
       <%= inline_svg_pack_tag( "media/images/histroy.svg", class: "h-8 w-8 pr-2") %>
