--- a/app/views/shared/_invite_ch.html.erb
+++ b/app/views/shared/_invite_ch.html.erb
@@ -1,4 +1,4 @@
-<div class="ch-background absolute w-full h-full top-0 bg-black bg-opacity-25 hidden flex justify-center items-center">
+<div class="ch-background absolute w-full h-full top-0 bg-black bg-opacity-25 hidden flex justify-center items-center z-40">
   <div class="px-6 py-4 bg-white shadow-2xl w-1/3 h-1/3 rounded relative">
     <div class="flex justify-between">
       <h5 class="font-bold text-xl"><%= t(".invite") %></h5>
