--- a/app/views/uploadedfiles/index.html.erb
+++ b/app/views/uploadedfiles/index.html.erb
@@ -20,7 +20,7 @@
               <%= image_tag file.document.url, class: "" if file.document.mime_type.include? "image" %>
               <%= image_pack_tag "media/images/PDF_file_icon.png" if file.document.mime_type.include? "pdf" %>
               <div class="absolute right-0">
-                <a href="<%= file.document.download_url(host: "http://localhost:3000/") %>" download= "">
+                <a href="<%= file.document.download_url(host: "https://staging.sladock.tw/") %>" download= "">
                   <i class="fas fa-cloud-download-alt"></i>
                 </a>
                 <a href="" data-action="click->uploadfile#shareFormShowUp" file_id="<%= file.id %>" >
