--- a/app/views/webhooks/index.html.erb
+++ b/app/views/webhooks/index.html.erb
@@ -1,15 +1,15 @@
-<h2 class="text-2xl text-center">Webhooks</h2>
+<h2 class="text-2xl text-center mb-5">Webhooks</h2>
 
-<div class="container mx-auto">
-  <div class="mb-4">
-    <div class="">
-    <%= link_to 'Add Webhook', new_webhook_path, class: "bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white border border-blue-500 hover:border-transparent rounded" %>
+<div class="container mx-auto max-w-xl">
+  <div class="flex mb-5">
+    <div class="mr-auto">
+      <%= link_to 'Add Webhook', new_webhook_path, class: "bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white border border-blue-500 hover:border-transparent rounded" %>
     </div>
   </div>
 
-  <ul class="mb-4">
+  <ul class="mb-5">
     <% @webhooks.each do |webhook| %>
-    <li class="mb-4 ">
+    <li class="mb-2">
       <%= webhook.webhook_name %>
       <%= link_to 'edit', edit_webhook_path(webhook), class: "text-blue-700 bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded" %>
       <%= link_to 'delete', webhook_path(webhook), method: 'delete', data: {confirm: "Are you sure?"}, class: "bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded" %>
@@ -17,5 +17,7 @@
     <% end %>
   </ul>
 
-  <%= link_to "Back to workspace", workspace_channel_path(@back), class: "bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded" %>
+  <div>
+    <%= link_to "Back to workspace", workspace_channel_path(@back), class: "bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded" %>
+  </div>
 </div>
