--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -43,13 +43,17 @@
     <div class="draft-des-group absolute top-15 right-3 bg-white rounded-lg border-2 z-10 shadow-sm
     hidden">
       <div class="flex items-center">
-        <span class="draft-delete">
-          <%= inline_svg_pack_tag("media/images/trash.svg",class: " w-8 p-2 stroke-current cursor-pointer hover:bg-gray-200") %>
+        <span class="draft-delete cursor-pointer hover:bg-gray-200 pl-2">
+          <i class="far fa-trash-alt text-gray-700"></i>
         </span>
-        <a href="#" class="draft-edit hover:bg-gray-200">
-          <%= inline_svg_pack_tag("media/images/pencil.svg",class: "w-8 p-2 stroke-current") %>
-        </a>
-          <%= inline_svg_pack_tag("media/images/plane.svg",class: "w-8 p-2 stroke-current cursor-pointer transform rotate-90  hover:bg-gray-200") %>
+        <span>
+          <a href="#" class="draft-edit hover:bg-gray-200 px-2">
+            <i class="fas fa-pencil-alt text-gray-700"></i>
+          </a>
+        </span>
+        <span class="hover:bg-gray-200 cursor-pointer pr-2">
+          <i class="far fa-paper-plane text-gray-700"></i>
+        </span>
       </div>
     </div>  
   </div>
