--- a/app/views/profiles/_edit.html.erb
+++ b/app/views/profiles/_edit.html.erb
@@ -1,5 +1,5 @@
 <div class="profile-background absolute w-full h-full top-0 bg-black bg-opacity-25 hidden flex justify-center items-center">
-  <div class="profile-form bg-white shadow-2xl w-5/12 h-11/12 rounded relative">
+  <div class="profile-form bg-white shadow-2xl w-10/12 md:w-5/12 h-11/12 rounded relative">
     <div class="flex justify-between items-center mb-8 p-5">
       <h5 class="font-bold text-xl">Edit your profile</h5>
       <button class="profile-cancel-btn font-bold text-gray-600 focus:outline-none">X</button>
@@ -17,14 +17,15 @@
         <%= f.text_field "profile[phone_number]",autocomplete:"off",class:"phone_number relative font-bold px-2 py-2 border border-gray-800 rounded block w-full placeholder-gray-600 focus:outline-none focus:shadow-outline" %>
         <span class="text-xs text-gray-500">enter a phone number</span>        
       </div>
-      <div class="col-span-1  flex flex-col items-center">
+      <div class="col-span-1 flex flex-col items-center">
+      <p class="font-bold text-sm mr-auto">Profile photo</p>
         <div class="mb-2 w-full">
             <%= image_tag (current_user.profile.try(:avatar_url,(:large)) || 'https://ca.slack-edge.com/T0196R42HU4-U018Z8Q6XU5-g15b03dc0178-192'),id: "avatar_large",class:"w-full block mx-auto" %>
         </div>
         <%= f.hidden_field "details",class:"detail" %>
         <%= f.hidden_field "profile[avatar]" %>
         <%= f.file_field "profile[avatar]",id:"avatar",class:'hidden' %>
-        <div class="avatar-btn border border-gray-600 py-2 px-5 font-bold rounded cursor-pointer">Upload an image
+        <div class="text-xs md:text-base avatar-btn border border-gray-600 py-2 px-2 md:px-5 font-bold rounded cursor-pointer">Upload an image
         </div>
           <div class="remove-avatar-btn">
           <% if current_user.profile.try(:avatar_url,(:large)) %>
@@ -43,7 +44,7 @@
     </div>
   </div>
   <%# 編輯照片 %>
-  <div class="resize-area hidden bg-white shadow-2xl w-5/12 h-8/12 rounded relative">
+  <div class="resize-area hidden bg-white shadow-2xl w-10/12 md:w-5/12 h-8/12 rounded relative">
     <div class="flex justify-between items-center mb-8 p-5">
       <h5 class="font-bold text-xl">Crop your photo</h5>
       <button class="profile-cancel-btn font-bold text-gray-600 focus:outline-none">X</button>
