--- a/app/views/shared/_invite_ws.html.erb
+++ b/app/views/shared/_invite_ws.html.erb
@@ -1,5 +1,5 @@
 <div class="add-people text-black absolute w-full h-full top-0 bg-black bg-opacity-25 hidden flex justify-center items-center z-40">
-  <div class="px-6 py-4 bg-white shadow-2xl w-1/3 h-1/3 rounded relative">
+  <div class="px-6 py-4 bg-white shadow-2xl w-4/5 md:w-1/3 h-1/3 rounded relative">
     <div class="flex justify-between">
       <h5 class="font-bold text-xl"><%= t(".invite",name: @workspace.name) %></h5>
     <button class="invite-cancel-btn font-bold text-gray-600 focus:outline-none">X</button>
