--- a/app/views/shared/_leftbar.html.erb
+++ b/app/views/shared/_leftbar.html.erb
@@ -3,9 +3,6 @@
     <h3 class="chatroomName text-white font-bold text-lg">
       <%= workspace.name %>
     </h3>
-    <button class="bg-white h-10 w-10 rounded-full text-black ml-auto mr-5">
-      <%= inline_svg_pack_tag("media/images/draft.svg",class: "w-5 stroke-current text-black mx-auto") %>
-    </button>    
   </div>
   <div class="bg-light_sladock text-white overflow-y-auto min-w-200 h-left_full" style="width: 300px" data-controller="notification" data-notification-workspace="<%= workspace.id %>" data-notification-user="<%= current_user.nickname %>">
     <div class="left-bar">
@@ -34,19 +31,26 @@
         </div>
       <% end %>
       <div class="w-full">
-        <p class="font-medium truncate pl-10 py-1"><%= t(".channel.direct") %></p>
-          <% (workspace.users - [current_user]).each do |user| %>
-        <p class="truncate pl-10 py-1 hover:bg-deep_sladock">
-          <%= link_to user.nickname, workspace_directmsg_path(workspace, user.id) %>
-          <span class="count text-red-300" unread-id="<%= user.id %>"><%= unread_msg_count["#{user.id}"] != nil && unread_msg_count["#{user.id}"] > 0 ? unread_msg_count["#{user.id}"] : "" %></span>
+        <p class="font-medium truncate pl-10 py-1">
+          <%= t(".channel.direct") %>
         </p>
-      <% end %>
+        <% (workspace.users - [current_user]).each do |user| %>
+          <p class="truncate pl-10 py-1 hover:bg-deep_sladock">
+            <%= link_to user.nickname, workspace_directmsg_path(workspace, user.id) %>
+            <span class="count text-red-300" unread-id="<%= user.id %>">
+              <%= unread_msg_count["#{user.id}"] != nil && unread_msg_count["#{user.id}"] > 0 ? unread_msg_count["#{user.id}"] : "" %>
+            </span>
+          </p>
+        <% end %>
+        <%# button顯示 %>
+        <p class="invite-ws-btn truncate pl-10 py-1 hover:bg-deep_sladock cursor-pointer">
+          <%= t(".sidebar.invite") %>
+        </p> 
+        <%= render "./shared/invite_ws" %>
+        <%= render './shared/language' %>
+      </div>
     </div>
   </div> 
-  <%# button顯示 %>
-  <p class="invite-ws-btn truncate pl-10 py-1 hover:bg-deep_sladock cursor-pointer"><%= t(".sidebar.invite") %></p> 
-  <%= render "./shared/invite_ws" %>
-  <%= render './shared/language' %>
 </div> 
-</div>
+
 
