--- a/app/views/shared/_leftbar.html.erb
+++ b/app/views/shared/_leftbar.html.erb
@@ -1,6 +1,6 @@
 <div class="leftbar hidden md:block">
   <div class="box-border border-b bg-sladock border-sladock_border h-16 flex items-center pl-5">
-    <h3 class="chatroomName text-white font-bold text-xl pt-4">
+    <h3 class="chatroomName text-white font-bold text-xl pt-4 current-worksapce" workspace_id="<%= @workspace.id %>"">
       <%= workspace.name %>
     </h3>
   </div>
@@ -37,7 +37,7 @@
         </p>
         <% (workspace.users - [current_user]).each do |user| %>
           <p class="truncate pl-10 py-1 hover:bg-sladock flex pr-5">
-            <%= link_to user.nickname, workspace_directmsg_path(workspace, user.id), class: "d-block mr-auto" %>
+            <%= link_to user.nickname, workspace_directmsg_path(workspace, user.id), class: "d-block mr-auto directmsg-each", user_id: user.id, directmsg_id: Directmsg.create_or_find([current_user, User.find(user.id)], @workspace.id).id %>
             <span class="count text-red-600 w-8 bg-yellow-400 rounded-full text-center hidden" unread-id="<%= user.id %>"><%= unread_msg_count["#{user.id}"] != nil  && unread_msg_count["#{user.id}"] > 0 ? unread_msg_count["#{user.id}"] : nil %></span>
           </p>
         <% end %>
