--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -13,7 +13,7 @@
   <div class="get_started px-10 py-16 max-w-400 bg-sladock text-white rounded-r">
     <h2 class="text-3xl font-bold leading-tight mb-3">Joining an existing workspace.</h2>
     <p class="mb-6">Sign in and join your team's workspace.</p>
-    <%= link_to 'Sign in to Slack', new_user_session_path,class:"block text-center text-sladock font-bold bg-white w-full py-2 border border-gray-400 rounded hover:bg-gray-100 transition-all duration-100" %>
+    <%= link_to 'Sign in to Sladock', new_user_session_path,class:"block text-center text-sladock font-bold bg-white w-full py-2 border border-gray-400 rounded hover:bg-gray-100 transition-all duration-100" %>
   </div>
 </div>
 <%# 如果登入過且有WS的話這邊會顯示 %>
