--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -39,16 +39,16 @@
     <div class="draft-des-group absolute top-15 right-3 bg-white rounded-lg border-2 z-10 shadow-sm
     hidden">
       <div class="flex items-center">
-        <span class="draft-delete cursor-pointer hover:bg-gray-200 pl-2">
-          <i class="far fa-trash-alt text-gray-700"></i>
+        <span class="draft-delete">
+          <i class="far fa-trash-alt text-gray-700  cursor-pointer hover:bg-gray-200 px-1 text-2xl"></i>
         </span>
         <span>
-          <a href="#" class="draft-edit hover:bg-gray-200 px-2">
+          <a href="#" class="draft-edit hover:bg-gray-200 px-1">
             <i class="fas fa-pencil-alt text-gray-700"></i>
           </a>
         </span>
-        <span class="hover:bg-gray-200 cursor-pointer pr-2">
-          <i class="far fa-paper-plane text-gray-700"></i>
+        <span>
+          <i class="far fa-paper-plane text-gray-700 hover:bg-gray-200 cursor-pointer px-1 text-2xl"></i>
         </span>
       </div>
     </div>  
