--- a/app/views/messages/_message_broadcast.html.erb
+++ b/app/views/messages/_message_broadcast.html.erb
@@ -6,40 +6,45 @@
   </div>
 <% end%>
 <div class="messages_child">
-  <div class="flex justify-between hover:bg-gray-100 relative txtcolumn mt-2 mb-2" data-controller="emoji" data-emoji-id =<%= message.id %>>
-    <div class="txt flex pl-5">
-      <div class="author font-bold mr-2">
-        <%= message.user.nickname %>
+  <div class="flex justify-between hover:bg-gray-100 relative txtcolumn mt-2 mb-2 pl-2" data-controller="emoji" data-emoji-id =<%= message.id %>>
+    <div class="txt flex relative pl-12">
+      <div class="w-10 h-10 absolute left-0">
+        <%= image_tag message.user.profile.try(:avatar_url,(:small)) || 
+          "https://ca.slack-edge.com/T018LF2LHK3-U018XMDF20Y-g206a10ded6a-32",class:"min-w-full h-frounded message_avatar","aria-haspopup": true,"aria-expanded": true,data:{id:message.user_id} %>
       </div>
-      <div class="share-msg flex-col">
-        <div class="createtime mr-2">
+      <div class="font-bold items-start">
+        <span class="pr-1 author"><%= message.user.nickname %></span>
+        <span class="createtime text-xs text-gray-700">
           <%= message.created_at.strftime("%I:%M") %>
-        </div>
-        <div class="content">
-            <%= raw(message.content) %>
-        </div>
-        <div class="file">
-          <% if message.attachfiles.empty? != true %>
-            <% message.attachfiles.each do |file|%>
-              <%= image_tag file.document(:small).url if file.document.mime_type.include? "image" %>
-              <%= link_to file.document.metadata["filename"], file.document.download_url(host: "http://localhost:3000/"), download:"" unless file.document.mime_type.include? "image"%>
+        </span>
+        <div class="share-msg flex-col">
+          <div class="content text-sm text-gray-800">
+              <%= raw(message.content) %>
+          </div>
+          <div class="file">
+            <% if message.attachfiles.empty? != true %>
+              <% message.attachfiles.each do |file|%>
+                <%= image_tag file.document(:small).url if file.document.mime_type.include? "image" %>
+                <%= link_to file.document.metadata["filename"], file.document.download_url(host: "http://localhost:3000/"), download:"" unless file.document.mime_type.include? "image"%>
+              <% end %>
             <% end %>
-          <% end %>
-        </div>
-          <% if message.share_message_id.present? %>
-          <div class="m-2 border-l-4 border-gray-600">
-            <div class="ml-2 font-bold"> <%= message.share_message.user.nickname %> </div>
-            <div class="ml-2"> <%= raw(message.share_message.content) %> </div>
-          </div> 
-        <% end %>       
-        <div class="reaction-emoji" data-target="emoji.reaction">
-          <div id="message-reaction-<%= message.id %>" class="flex added-emoji">
-            <%= render './shared/reaction', message: message %>
-           </div>
-        </div>
+          </div>
+            <% if message.share_message_id.present? %>
+            <div class="m-2 border-l-4 border-gray-600">
+              <div class="ml-2 font-bold"> <%= message.share_message.user.nickname %> </div>
+              <div class="ml-2"> <%= raw(message.share_message.content) %> </div>
+            </div> 
+          <% end %>       
+          <div class="reaction-emoji" data-target="emoji.reaction">
+            <div id="message-reaction-<%= message.id %>" class="flex added-emoji">
+              <%= render './shared/reaction', message: message %>
+            </div>
+          </div>
+        </div>        
       </div>
+
     </div>
-    <div class="react-bar ">
+    <div class="react-bar">
       <button class="emoji-trigger btn-blue btn" data-action="click-> emoji#click" data-id=<%= message.id %>><i class="far fa-laugh-wink"></i></button>
       <% if controller_name != "directmsgs"%>
       <button class= "share-btn btn btn-blue" data-id="<%= message.id %>"><i class="far fa-share-square"></i></button>
