slacdock channel view color

--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -7,7 +7,7 @@
     <p class="mb-6">Create a brand-new workspace for you and your team.</p>
     <%= link_to 'Sign up', new_user_registration_path,class: "block text-center text-sladock font-bold w-full py-2 border border-gray-400 rounded hover:bg-gray-100 transition-all duration-100"%>
   </div>
-  <div class="get_started px-10 py-16 max-w-400 bg-deep_sladock text-white rounded-r">
+  <div class="get_started px-10 py-16 max-w-400 bg-sladock text-white rounded-r">
     <h2 class="text-3xl font-bold leading-tight mb-3">Is your team already using Slack?</h2>
     <p class="mb-6">Find and sign in to your team’s existing workspace.</p>
     <%= link_to 'Sign in to Slack', new_user_session_path,class:"block text-center text-sladock font-bold bg-white w-full py-2 border border-gray-400 rounded hover:bg-gray-100 transition-all duration-100" %>
