--- a/app/views/shared/_leftbar.html.erb
+++ b/app/views/shared/_leftbar.html.erb
@@ -1,9 +1,9 @@
-<div class="box-border border-b bg-light_sladock border-sladock_border h-16 flex items-center pl-10">
+<div class="box-border border-b bg-sladock border-sladock_border h-16 flex items-center pl-10">
   <h3 class="chatroomName text-white font-bold text-lg">
     <%= workspace.name %>
   </h3> 
 </div>
-<div class="bg-light_sladock text-white overflow-y-auto min-w-200 h-left_full" style="width: 300px" data-controller="notification" data-notification-workspace="<%= workspace.id %>" data-notification-user="<%= current_user.nickname %>">
+<div class="bg-sladock text-white overflow-y-auto min-w-200 h-left_full" style="width: 300px" data-controller="notification" data-notification-workspace="<%= workspace.id %>" data-notification-user="<%= current_user.nickname %>">
   <div class="left-bar">
     <p class="truncate pl-10 py-1 hover:bg-deep_sladock"><%= t(".sidebar.threads") %></p>
     <p class="truncate pl-10 py-1 hover:bg-deep_sladock"><%= t(".sidebar.mentions") %></p>
@@ -30,7 +30,7 @@
     <div class="w-full">
       <p class="font-medium truncate pl-10 py-1"><%= t(".channel.direct") %></p>
       <% (workspace.users - [current_user]).each do |user| %>
-        <p class="truncate pl-10 py-1 hover:bg-deep_sladock">
+        <p class="truncate pl-10 py-1 hover:bg-sladock">
           <%= link_to user.nickname, workspace_directmsg_path(workspace, user.id) %>
           <span class="count text-red-300" unread-id="<%= user.id %>"><%= unread_msg_count["#{user.id}"] != nil && unread_msg_count["#{user.id}"] > 0 ? unread_msg_count["#{user.id}"] : "" %></span>
         </p>
