--- a/app/views/workspaces/new.html.erb
+++ b/app/views/workspaces/new.html.erb
@@ -1,11 +1,11 @@
 
 <%= render "./shared/header" %>
   <div class="chatroom flex h-full" data-controller="hello">
-    <div class=" leftbar flex flex-col bg-light_sladock">
-      <div class="box-border border-b bg-light_sladock border-sladock_border h-16 flex items-center">
+    <div class=" leftbar flex flex-col bg-sladock">
+      <div class="box-border border-b bg-sladock border-sladock_border h-16 flex items-center">
         <div class="ml-5 w-2/4 h-5 px-2 bg-ws_name_purple rounded-full text-white font-bold text-sm truncate" data-target="hello.output"></div>
         </div>
-        <div class="bg-light_sladock text-white h-left_full" style="width: 300px">
+        <div class="bg-sladock text-white h-left_full" style="width: 300px">
       </div>
     </div>
     <div class="flex flex-col flex-grow min-w-0 min-h-0 ml-10">
