--- a/app/views/workspaces/show.html.erb
+++ b/app/views/workspaces/show.html.erb
@@ -2,7 +2,7 @@
   <div>
     <%= render "./shared/header" %>
     <div class="chatroom grid grid-cols-12">
-      <div class="bg-light_sladock text-white col-span-2 h-screen_94 overflow-y-scroll">
+      <div class="bg-sladock text-white col-span-2 h-screen_94 overflow-y-scroll">
         <h1><%= t(".name",name: @workspace.name) %></h1>
         <%= link_to t(".create_channel"), new_workspace_channels_path(@workspace.id) %>
         <h2><%= t(".all_channels",name: @workspace.name) %></h2>
