--- a/app/views/shared/_leftbar.html.erb
+++ b/app/views/shared/_leftbar.html.erb
@@ -3,12 +3,9 @@
     <%= workspace.name %>
   </h3> 
 </div>
-<div class="bg-sladock text-white overflow-y-auto min-w-200 h-left_full" style="width: 300px" data-controller="notification" data-notification-workspace="<%= workspace.id %>" data-notification-user="<%= current_user.nickname %>">
+<div class="bg-sladock text-white overflow-y-auto min-w-200 h-left_full pt-4" style="width: 300px" data-controller="notification" data-notification-workspace="<%= workspace.id %>" data-notification-user="<%= current_user.nickname %>">
   <div class="left-bar">
-    <p class="truncate pl-10 py-1 hover:bg-deep_sladock"><i class="far fa-comment-dots mr-2"></i><%= t(".sidebar.threads") %></p>
-    <p class="truncate pl-10 py-1 hover:bg-deep_sladock"><i class="far fa-comments mr-2"></i><%= t(".sidebar.mentions") %></p>
     <p class="truncate pl-10 py-1 hover:bg-deep_sladock"><i class="fas fa-file-download mr-2"></i><%= link_to t(".sidebar.save"), workspace_uploadedfiles_path(workspace) %></p>
-    <!-- <p class="truncate pl-10 py-1 hover:bg-deep_sladock"><%= t(".sidebar.more") %></p> -->
     <p class="truncate pl-10 py-1 hover:bg-deep_sladock"><%= t(".sidebar.shared") %></p>
     <div class="w-full">
       <div class="font-medium flex justify-between items-center pl-10 py-1">
