--- a/app/views/shared/_leftbar.html.erb
+++ b/app/views/shared/_leftbar.html.erb
@@ -1,20 +1,19 @@
-<div class="box-border border-b bg-sladock border-sladock_border h-16 flex items-center pl-10">
+<div class="box-border bg-sladock border-b border-sladock_border h-16 flex items-center pl-10">
   <h3 class="chatroomName text-white font-bold text-lg">
     <%= workspace.name %>
   </h3> 
 </div>
 <div class="bg-sladock text-white overflow-y-auto min-w-200 h-left_full pt-4" style="width: 300px" data-controller="notification" data-notification-workspace="<%= workspace.id %>" data-notification-user="<%= current_user.nickname %>">
   <div class="left-bar">
-    <p class="truncate pl-10 py-1 hover:bg-deep_sladock"><i class="fas fa-file-download mr-2"></i><%= link_to t(".sidebar.save"), workspace_uploadedfiles_path(workspace) %></p>
-    <p class="truncate pl-10 py-1 hover:bg-deep_sladock"><%= t(".sidebar.shared") %></p>
-    <div class="w-full">
-      <div class="font-medium flex justify-between items-center pl-10 py-1">
-        <p class="ch-name truncate"><%= t(".channel.name") %></p> 
-        <%= link_to '+', new_workspace_channels_path(workspace_id: workspace.id),class: 'create-ch-btn text-2xl' %>
+    <p class="truncate pl-10 pb-2 hover:bg-deep_sladock bg-sladock border-b border-border_b"><i class="fas fa-file-download mr-2"></i><%= link_to t(".sidebar.save"), workspace_uploadedfiles_path(workspace) %></p>
+    <div class="w-full ">
+      <div class="font-medium flex justify-between items-center py-1 ">
+        <p class="ch-name truncate pl-5 text-lg"><%= t(".channel.name") %></p> 
+        <%= link_to '+', new_workspace_channels_path(workspace_id: workspace.id),class: 'create-ch-btn text-2xl pr-5'%>
       </div>
       </div>
       <% channels.each do |channel| %>
-        <div data-controller="channels" data-channels-id="<%= channel.id %>" class='truncate pl-10 py-1 hover:bg-deep_sladock'>
+        <div data-controller="channels" data-channels-id="<%= channel.id %>" class='truncate pl-10 py-1 hover:bg-deep_sladock '>
           <span>#</span>
           <%= link_to channel.name, workspace_channel_path(workspace, channel), channel_id: channel.id, class: unread_msg_bol[channel.id] ? " font-bold" : "" %>
           <% if channel.users.include?(current_user) %>
@@ -25,7 +24,7 @@
         </div>
       <% end %>
     <div class="w-full">
-      <p class="font-medium truncate pl-10 py-1"><%= t(".channel.direct") %></p>
+      <p class="font-medium truncate pl-5 text-lg py-2 mt-2 border-t border-border_b"><%= t(".channel.direct") %></p>
       <% (workspace.users - [current_user]).each do |user| %>
         <p class="truncate pl-10 py-1 hover:bg-sladock">
           <%= link_to user.nickname, workspace_directmsg_path(workspace, user.id) %>
