--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -12,7 +12,7 @@
   </div>
   <div class="get_started px-10 py-16 max-w-400 bg-sladock text-white rounded-r">
     <h2 class="text-3xl font-bold leading-tight mb-3">Joining an existing workspace.</h2>
-    <p class="mb-6">Sign in and join your team's workspace.</p>
+    <p class="mb-6">Get started to sign in and join your team's workspace.</p>
     <%= link_to 'Sign in to Sladock', new_user_session_path,class:"block text-center text-sladock font-bold bg-white w-full py-2 border border-gray-400 rounded hover:bg-gray-100 transition-all duration-100" %>
   </div>
 </div>
@@ -22,11 +22,11 @@
 </div>
 <%# get_started_tip %>
 <div class="get_started_tip container mx-auto flex max-w-xl">
-  <div class="text py-5 pr-3 flex flex-wrap justify-center sm:block">
+  <div class="hidden sm:block w-1/2">
+    <%= image_pack_tag("media/images/get_started.png")%>
+  </div>
+  <div class="text py-5 pl-3 flex flex-wrap justify-center sm:block">
     <p class="text-sm font-bold mb-2">What’s a Sladock workspace?</p>
     <p class="text-sm ">By Invitation Only. The Sladock workspaces are available only to those who were invited</p>
-  </div>
-  <div class="hidden sm:block">
-    <%= image_pack_tag("media/images/get-started-workspace-tip-9764b79.png")%>
   </div>
 </div>
