--- a/app/views/channels/show.html.erb
+++ b/app/views/channels/show.html.erb
@@ -1,4 +1,3 @@
-<%= render "./shared/header" %>
 <div class="chatroom flex overflow-hidden">
   <%= render "./shared/leftbar", workspace: @workspace, 
                                   channels:  @channels,
@@ -15,6 +14,32 @@
           <i class="fas fa-user-plus text-gray-600" ></i>
         </button>
       <% end %>
+          <div class="profile pr-2 col-span-1 ml-auto">
+            <div class="clickopen relative">
+              <span class="rounded-md shadow-sm">
+                <%= image_tag (current_user.profile.try(:avatar_url,(:small)) || 'https://ca.slack-edge.com/T018LF2LHK3-U018XMDF20Y-g206a10ded6a-32'),class:"leading-5 transition ease-in-out duration-150 avatar_small","aria-haspopup": true,"aria-expanded": true,id: "options-menu" %> 
+              </span>
+            </div>
+            <div class="open mt-2 w-56 rounded-md shadow-lg hidden absolute right-0 z-40">
+              <div class="rounded-md bg-white shadow-xs" role="menu" aria-orientation="vertical"   aria-labelledby="options-menu">
+                <div class="pl-2 py-1 flex">
+                    <%= image_tag current_user.profile.try(:avatar_url,(:small)) || "https://ca.slack-edge.com/T018LF2LHK3-U018XMDF20Y-g206a10ded6a-32",class:"leading-5 transition ease-in-out duration-150 avatar_small","aria-haspopup": true,"aria-expanded": true %> 
+                  <a href="#" class="block px-4 py-2 text-sm leading-5 text-gray-700 hover:bg-gray-100        hover:text-gray-900 focus:outline-none focus:bg-gray-100 focus:text-gray-900" role="menuitem">
+                    <%= t(".profile.status") %>
+                  </a>
+                </div>
+                <div class="border-t border-gray-100"></div>
+                <div class="py-1">
+                  <button class= "edit_profile block px-4 py-2 text-sm leading-5 text-gray-700 hover:bg-gray-100 hover:text-gray-900 focus:outline-none focus:bg-gray-100 focus:text-gray-900" role="menuitem"> <%= t(".profile.edit") %></button>
+                </div>
+                <div class="border-t border-gray-100"></div>
+                <div class="py-1">
+                  <%= link_to t(".profile.sign_out"), destroy_user_session_path, method: "DELETE", class: "block px-4 py-2 text-sm leading-5 text-gray-700 hover:bg-gray-100 hover:text-gray-900 focus:outline-none focus:bg-gray-100 focus:text-gray-900 sign-out",role: "menuitem" 
+                  %>
+          </div>
+        </div>
+      </div>
+    </div>
     </div>
     <%# 訊息區 %>
     <div class="messages_area break-all flex flex-col-reverse overflow-y-auto h-chat_full flex-grow border border-1 bg-gray-300">
