--- a/app/views/shared/_leftbar.html.erb
+++ b/app/views/shared/_leftbar.html.erb
@@ -4,11 +4,7 @@
       <%= workspace.name %>
     </h3>
   </div>
-<<<<<<< HEAD
-  <div class="bg-light_sladock text-white overflow-y-auto min-w-200 h-left_full" style="width: 300px" data-controller="notification" data-notification-workspace="<%= workspace.id %>" data-notification-user="<%= current_user.nickname %>" data-notification-channel="<%= channel&.id || "" %>">
-=======
-  <div class="bg-sladock text-white overflow-y-auto min-w-200 h-left_full pt-4" style="width: 300px" data-controller="notification" data-notification-workspace="<%= workspace.id %>" data-notification-user="<%= current_user.nickname %>">
->>>>>>> 313ebe5... channel show item style
+  <div class="bg-sladock text-white overflow-y-auto min-w-200 h-left_full pt-4 " style="width: 300px" data-controller="notification" data-notification-workspace="<%= workspace.id %>" data-notification-user="<%= current_user.nickname %>" data-notification-channel="<%= channel&.id || "" %>">
     <div class="left-bar">
       <%= link_to t(".sidebar.drafts"),workspace_draft_path(@workspace),
         class: "truncate pl-10 py-1 hover:bg-deep_sladock block hidden draft-btn" %>
