--- a/app/views/drafts/show.html.erb
+++ b/app/views/drafts/show.html.erb
@@ -3,7 +3,8 @@
   <%= render "./shared/leftbar", workspace: @workspace, 
                                  channels:  @channels,
                                  unread_msg_bol: @unread_msg_bol,
-                                 unread_msg_count: @unread_msg_count %>
+                                 unread_msg_count: @unread_msg_count,
+                                 channel: @channel || @directmsg %>
     <div class="flex flex-col flex-grow min-w-0 min-h-0">
       <%# 上方白色區塊顯示頻道名稱與邀請按鈕 %>
       <div class="box-border border-b border-gray-400 h-16 font-bold flex flex-col justify-center pl-3">
