change emoji size

--- a/app/views/shared/_reaction.html.erb
+++ b/app/views/shared/_reaction.html.erb
@@ -3,6 +3,6 @@
   <% next if value.length == 0 %>
   <!-- <button class="emoji_key"><%= key %></button>
   <button class="emoji_value"><%= value %></button> -->
-  <%= button_to key, emoji_message_path(message.id, emoji: key), remote: true, class: value.include?(current_user.id) ? 'mine' : '' %>
+  <%= button_to key ,emoji_message_path(message.id, emoji: key), remote: true, class: value.include?(current_user.id) ? 'text-2xl bg-transparent mine' : 'text-2xl bg-transparent' %>
   <span><%= value.length %></span>
 <% end %>
