--- a/app/views/shared/_leftbar.html.erb
+++ b/app/views/shared/_leftbar.html.erb
@@ -1,6 +1,6 @@
 <div class="leftbar hidden md:block">
-  <div class="box-border border-b bg-sladock border-sladock_border h-16 flex items-center pl-10">
-    <h3 class="chatroomName text-white font-bold text-lg">
+  <div class="box-border border-b bg-sladock border-sladock_border h-16 flex items-center pl-5">
+    <h3 class="chatroomName text-white font-bold text-xl pt-4">
       <%= workspace.name %>
     </h3>
   </div>
