--- a/app/views/shared/_leftbar.html.erb
+++ b/app/views/shared/_leftbar.html.erb
@@ -31,11 +31,9 @@
           <%= t(".channel.direct") %>
         </p>
         <% (workspace.users - [current_user]).each do |user| %>
-          <p class="truncate pl-10 py-1 hover:bg-sladock">
-            <%= link_to user.nickname, workspace_directmsg_path(workspace, user.id) %>
-            <span class="count text-red-300" unread-id="<%= user.id %>">
-              <%= unread_msg_count["#{user.id}"] != nil && unread_msg_count["#{user.id}"] > 0 ? unread_msg_count["#{user.id}"] : "" %>
-            </span>
+          <p class="truncate pl-10 py-1 hover:bg-sladock flex pr-5">
+            <%= link_to user.nickname, workspace_directmsg_path(workspace, user.id), class: "d-block mr-auto" %>
+            <span class="count text-red-600 w-8 bg-yellow-400 rounded-full text-center hidden" unread-id="<%= user.id %>"><%= unread_msg_count["#{user.id}"] != nil  && unread_msg_count["#{user.id}"] > 0 ? unread_msg_count["#{user.id}"] : nil %></span>
           </p>
         <% end %>
         <%# button顯示 %>
